overflow resolved

--- a/scss/layouts/site/_siteNavigation.scss
+++ b/scss/layouts/site/_siteNavigation.scss
@@ -125,7 +125,7 @@ $h1-font-size: 48px;
 /* Navbar */
 .navbar {
  
- 
+ overflow: hidden;
   position: fixed;
   top: 0;
   
