--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,3 +12,6 @@ body{
     background-color: var(--site-bg);
 }
 
+body * {
+    border: 1px solid red;
+  }
